JumpScript/tests/baselines/reference/invalidTripleSlashReference.errors.txt
tests/cases/compiler/invalidTripleSlashReference.jump(1,22): error TS6053: File 'tests/cases/compiler/filedoesnotexist.jump' not found.
tests/cases/compiler/invalidTripleSlashReference.jump(2,22): error TS6053: File 'tests/cases/compiler/otherdoesnotexist.d.jump' not found.


==== tests/cases/compiler/invalidTripleSlashReference.jump (2 errors) ====
    /// <reference path='filedoesnotexist.jump'/>
                         ~~~~~~~~~~~~~~~~~~~
!!! error TS6053: File 'tests/cases/compiler/filedoesnotexist.jump' not found.
    /// <reference path='otherdoesnotexist.d.jump'/>
                         ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6053: File 'tests/cases/compiler/otherdoesnotexist.d.jump' not found.
    
    // this test doesn't actually give the errors you want due to the way the compiler reports errors
    var x = 1;